--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react-native": "^6.0.0-rc.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-hole-view": "^2.2.0",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
