--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "brazilian-values": "^0.12.0",
     "lottie-react-native": "^6.0.0-rc.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-country-codes-picker": "^2.3.0",
     "react-native-hole-view": "^2.2.0",
+    "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
