--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "brazilian-values": "^0.12.0",
@@ -17,10 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-country-codes-picker": "^2.3.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-hole-view": "^2.2.0",
     "react-native-maps": "^1.4.0",
     "react-native-mask-input": "^1.2.3",
-    "react-native-reanimated": "^3.0.0",
+    "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "styled-components": "^5.3.6",
