FEAT: adding geocoding and using it to get informations from location

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "types": [
       "react-native",
       "jest",
-      "styled-components-react-native"
+      "styled-components-react-native",
+    ],
+    "typeRoots": [
+      "./src/types"
     ],
     "strict": true
   },
