--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-hole-view": "^2.2.0",
     "react-native-maps": "^1.4.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
