--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "styled-components": "^5.3.6",
+    "valtio": "^1.10.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
